# milf

./: .gitignore  README.md  pubspec.yaml  test_runner.sh
CentralServer/: .env.example  go.mod
CentralServer/cmd/server/: main.go
CentralServer/internal/auth/core/: service.go
CentralServer/internal/auth/domain/: models.go
CentralServer/internal/auth/handler/: handler.go  http.go
CentralServer/internal/auth/interfaces/: interfaces.go
CentralServer/internal/compiler/core/: compiler.go  compiler_worker.go
CentralServer/internal/compiler/domain/: errors.go  requests.go  types.go
CentralServer/internal/compiler/interfaces/: object_store.go  run_trigger.go
CentralServer/internal/gateway/: gateway.go
CentralServer/internal/gateway/core/: lambda_service.go  service.go
CentralServer/internal/gateway/domain/: domain.go  dto.go  entities.go  errors.go  ports.go  validation.go
CentralServer/internal/gateway/handler/: compact.go  handler.go
CentralServer/internal/gateway/interfaces/: auth.go  compiler.go  database.go  http_utils.go  interfaces.go  lambda_handler.go  orchestrator.go  router.go  service_interface.go
CentralServer/internal/storage/: memory.go  memory_compiler_store.go  memory_store.go  postgres_execution_repo.go  postgres_function_repo.go
CentralServer/utils/: logger.go
Concepts/: 1.txt  2.txt
android/: build_log.txt
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  execution_monitor.cpp  execution_monitor.h  memory_tracker.cpp  memory_tracker.h  native-lib.cpp
consumer/: .gitignore  LICENSE  generate_medium_files.sh  generate_test_files.sh  pubspec.yaml
consumer/android/app/: build.gradle.kts
consumer/ios/Runner.xcodeproj/: project.pbxproj
consumer/lib/: main.dart
consumer/lib/config/: env.dart  service_locator.dart
consumer/linux/: CMakeLists.txt
consumer/macos/Runner.xcodeproj/: project.pbxproj
consumer/test/: widget_test.dart
consumer/test_assets/c_batch/: heavy_500mb.c  job_1.c  job_10.c  job_100.c  job_12.c  job_13.c  job_15.c  job_16.c  job_17.c  job_18.c  job_2.c  job_20.c  job_25.c  job_26.c  job_28.c  job_29.c  job_30.c  job_31.c  job_33.c  job_34.c  job_36.c  job_38.c  job_4.c  job_41.c  job_42.c  job_43.c  job_46.c  job_47.c  job_48.c  job_49.c  job_5.c  job_50.c  job_51.c  job_52.c  job_53.c  job_54.c  job_55.c  job_57.c  job_58.c  job_6.c  (+31 more)
consumer/test_assets/c_files/: math_ops.c  primes.c
consumer/web/: index.html
consumer/windows/runner/: Runner.rc
docs/: guide.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
milf-1/: .gitignore
milf-1/Client/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
milf-1/Client/src/: App.tsx  index.css
milf-2/CentralServer/: go.mod  schema.sql
milf-2/CentralServer/app/: bootstrap.go
milf-2/CentralServer/docs/: central-server-modules-report.md
milf-2/consumer/: .env.example  README.md
test/: add.c  add.wasm  addd.wasm  addf.wasm  compile_grayscale.py  create_modulo.py  create_wasm.py  fibonacci_test.c  grayscale.c  helloo.wasm  image_flow_example.c  modulo.c  modulo.wasm  prime_mvp.wasm  prime_objective.c  server.wasm  server_test.c  socket.wasm  socket_shim.wasm  socket_test.c  socket_test.wasm  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+131 files in other folders)
